# lumenoid_spatial_trans_annotator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/cell_annotation/: __init__.py  cli.py  config.py  io.py  log.py  qc.py  viewer.py
tests/: test_config.py  test_io.py  test_log.py
